2007-02-27  Andrew Cagney  <cagney@redhat.com>

	* SourceBuffer.java: Replace StackFrame .getSourceFile with Line
	.getFile.

	* SourceBuffer.java: Use StackFrame .getLines, simplify search for
	line information.

2007-02-26  Andrew Cagney  <cagney@redhat.com>

	* SourceWindow.java: Use StackFrame .getLines.

	* SourceBuffer.java: Replace Frame .getStartLine and Frame
	.getEndLine. with Frame .getLines .getLine.
	* InlineBuffer.java (setCurrentLine): Delete.

	* SourceBuffer.java: Do not use StackFrame .getStartOffset or
	.getEndOffset.
	
	* SourceWindow.java: Use StackFrame .getDwflLine and not
	.hasDebugInfo.
	
	* SourceBuffer.java: Update, use StackFrame .getSymbol.
	* SourceWindow.java: Ditto.

2007-02-26  Mike Cvet  <mcvet@redhat.com>

	* SourceWindow.java (populateStackBrowser): Re-arranged to use new
	CurrentStackView.selectRow(). Fixes #4094.
	* CurrentStackView.java (selectRow): Rewritten to properly select a
	row in the TreeView using TreeSelection. Added Javadoc. Fixes #4094.

2007-02-22  Mike Cvet  <mcvet@redhat.com>

	* SourceBuffer.java (disassembleFrame): Added. Disassembles instructions
	from a region of memory given by a StackFrame, and inserts it into
	the buffer. Fixes #4008.
	(loadFile): Upon loading the buffer from a new process without debuginfo, 
	disassemble it by default.
	* SourceWindow.java (doStep): Only bother removing buffer TextTags if 
	RunState returns sucessfully from the stepping request.
	(doAsmStep): Ditto.

2007-02-20  Mike Cvet  <mcvet@redhat.com>

	* SourceWindow.java (resensitize): Remove sensitivity for step-out
	and instruction step-out, pending #4083.

2007-02-19  Mike Cvet  <mcvet@redhat.com>

	* SourceWindow.java (createActions): Enabled step-over and
	instruction step-over.
	(resensitize): Set above actions to sensitive.
	(doContinue): Update call to RunState.continueExecution().
	(generateProcStackTrace): Assign DwflLine before DOM creation.
	Removed warning dialog for missing source code, print errors