@@ -1,3 +1,9 @@
+2007-02-27  Mike Cvet  <mcvet@redhat.com>
+
+	* SourceBuffer.java (highlightLine): Make sure that the StackFrame has 
+	available lines before grabbing them. Fixes #4106.
+	* SourceWindow.java (generateProcStackTrace): Ditto.
+
 2007-02-27  Andrew Cagney  <cagney@redhat.com>
 
 	* SourceBuffer.java: Replace StackFrame .getSourceFile with Line
